# mai

./: Cargo.toml  README.md  build.rs
src/: ast.rs  backend.rs  codegen.rs  grammar.lalrpop  lexer.rs  lib.rs  main.rs  parse.rs  parser.lalrpop  parser.rs  tast.rs  tc.rs  token.rs
tests/: it.rs
